--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.11"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.4"
   }
 }
