--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "file_uploader",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "cd ./client && npm run start",
+    "dev": "npm run server & npm run client"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
