--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "npm run server & npm run client"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.11"
   },
