--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "nodemon": "^1.18.11"
   },
   "dependencies": {
