--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "concurrently": "^4.1.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.17.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "nodemon": "^1.18.11"
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "nodemon": "^1.18.11",
+    "prettier": "^1.17.0"
   },
   "dependencies": {
     "express": "^4.16.4",
