--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
 //npm i -D prettier eslint-config-prettier eslint-plugin-prettier
 
 {
-  "extends": ["airbnb"],
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["prettier"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2016,
