--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "dev": "npm run server & npm run client"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
     "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
