--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "9.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
