--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
     "babel-eslint": "9.0.0",
-    "eslint": "^5.16.0",
+    "eslint": "5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.17.2",
