--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -16,6 +16,7 @@
     "node": true
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
 }
