--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,4 +1,4 @@
-// npm i -D eslint@5.6.0 babel-eslint eslint-config-airbnb eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-react
+// npm i -D eslint@5.12.0 babel-eslint@9.0.0 eslint-config-airbnb eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-react
 
 //npm i -D prettier eslint-config-prettier eslint-plugin-prettier
 
