--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^1.17.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4"
   }
